# rp326-usb

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: escpos.rs  main.rs  printer.rs
